syntax = "proto3";

package ai.metathings.service.echo;

import "google/protobuf/wrappers.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

message EchoRequest {
	google.protobuf.StringValue text = 1 [(validator.field) = {msg_exists: true}];
}

message EchoResponse {
	string text = 1;
}
