syntax = "proto3";

package ai.metathings.service.echo;
option go_package = "echo";

import "echo.proto";

service EchoService {
	rpc Echo(EchoRequest) returns (EchoResponse) {}
	rpc StreamingEcho(stream EchoRequest) returns (stream EchoResponse) {}
}
