syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message StreamCallRequest {
	OpDevice device = 1;
	OpStreamCallValue value = 2;
}

message StreamCallResponse {
	Device device = 1;
	StreamCallValue value = 2;
}
